fix z-index

--- a/assets/scss/components/footer.scss
+++ b/assets/scss/components/footer.scss
@@ -96,6 +96,7 @@ footer,
   bottom: 0;
   padding-left: 5px;
   box-shadow: 10px 0 60px $cardShadow;
+  z-index: 98;
 }
 #TableOfContents.toc-abs {
   position: absolute;
@@ -122,6 +123,7 @@ footer,
     width: 100%;
     border-radius: 0;
     padding: 5px;
+    z-index: 99;
     p, .categories, h3 {
       display: none;
     }
